Changed skills page

--- a/styles/index/media.css
+++ b/styles/index/media.css
@@ -1,3 +1,23 @@
+@media only screen and (min-width: 1920px) {
+  body {
+    font-size: 19.2px;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  p {
+    font-size: 14.4px;
+  }
+}
+
+a {
+  color: inherit;
+}
+
+.cursor-wrapper {
+  pointer-events: none;
+}
+
 @media (min-width:992px) {
     html.w-mod-js:not(.w-mod-ix) [data-w-id="64c35d5a-82ad-02a2-19d6-4bd1703656c9"] {
       -webkit-transform: translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
