Icons skills modified

--- a/styles/index/secondary.css
+++ b/styles/index/secondary.css
@@ -83,3 +83,8 @@ input[type="text"] {
 .newsletter__text-field::placeholder {
     color: #FFF;
 }
+
+.skill-icons {
+    background-color: red;
+    fill: white;
+}
