Iconcs and finalized

--- a/styles/index/secondary.css
+++ b/styles/index/secondary.css
@@ -85,6 +85,7 @@ input[type="text"] {
 }
 
 .skill-icons {
-    background-color: red;
-    fill: white;
+    /* background-color: red; */
+    fill: white !important;
+    color: #ffffff;
 }
