--- a/styles/index/secondary.css
+++ b/styles/index/secondary.css
@@ -88,4 +88,14 @@ input[type="text"] {
     /* background-color: red; */
     fill: white !important;
     color: #ffffff;
+    width: 10rem;
+    height: 10rem;
+}
+
+.timeline__icon {
+    /* background-color: green; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
