--- a/styles/primary.css
+++ b/styles/primary.css
@@ -2789,8 +2789,9 @@ p.main-p {
 
 .footer-heading {
     display: inline-block;
-    font-size: 1.6em;
+    font-size: 1.7rem;
     font-weight: 400;
+    text-align: center;
     margin-bottom: 3rem;
 }
 
@@ -2823,6 +2824,11 @@ p.main-p {
 
 .footer__link-item.mb, a {
     font-size: 1rem;
+}
+
+.footer-link {
+    font-size: 1.2rem;
+    left: 50px;
 }
 
 .newsletter-form {
@@ -4440,7 +4446,11 @@ p.main-p {
     z-index: 9999;
     width: 100%;
     background-color: #131413;
-    opacity: 1
+    opacity: 1;
+    padding: 0;
+    margin: 0;
+    height: auto;
+    height:20%;
 }
 
 .footer-bottom {
