--- a/styles/primary.css
+++ b/styles/primary.css
@@ -4478,6 +4478,7 @@ p.main-p {
     display: flex;
     width: 50%;
     height: 100%;
+    /* background-color: red; */
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -4493,8 +4494,8 @@ p.main-p {
     align-items: flex-start
 }
 
+
 .fullpage__item-text-2 {
-    font-family: 'Walter Turncoat', cursive;
     font-size: 1.6em;
     line-height: .8;
     font-weight: 300;
